# DeepTag

./: .gitignore  Dockerfile  README.md  db123.sqlite3  docker-compose.storage.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tailwind.config.js
apps/accounts/: admin.py  forms.py  models.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_alter_user_managers.py
apps/accounts/templates/accounts/: login.html
apps/annotations/: forms.py  models.py  views.py
apps/annotations/migrations/: 0001_initial.py  0002_alter_annotation_bbox.py
apps/annotations/static/annotations/: konva.js  main.js
apps/annotations/templates/annotations/: annotation.html  annotation_card.html  annotation_list.html  header.html  hotkeys_hints.html  leftbar.html  main.html  update.html
apps/labels/: forms.py  models.py
apps/labels/migrations/: 0001_initial.py
apps/projects/: forms.py  models.py  urls.py  views.py
apps/projects/migrations/: 0001_initial.py  0002_alter_project_table.py  0003_export.py
apps/projects/static/projects/: main.js
apps/projects/templates/projects/: create.html  detail.html  edit.html  export.html  index.html  label_form_row.html
apps/tasks/: forms.py  models.py  urls.py  utils.py  views.py
apps/tasks/migrations/: 0001_initial.py  0002_image.py  0003_alter_task_assigned_to.py
config/: settings.py  urls.py
static/: tailwindcss.css
static/js/: theme-manager.js
tasks/: app.py  export.py
templates/: base.html
templates/components/: header.html  theme_selector.html  user_dropdown_menu.html
(+9 files in other folders)
