[project]
name = "deeptag"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitry Langer",email = "DimaLanger@outlook.com"}
]
requires-python = ">=3.13"
dependencies = [
    "django (==5.2)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "django-decorator-include (>=3.3,<4.0)",
    "django-storages (>=1.14.6,<2.0.0)",
    "boto3 (>=1.42.68,<2.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "django-multiupload-plus (>=0.1.0,<0.2.0)",
    "whitenoise (>=6.12.0,<7.0.0)",
    "gunicorn (>=25.3.0,<26.0.0)",
    "celery (>=5.6.3,<6.0.0)",
    "redis (>=8.0.0,<9.0.0)",
    "mysqlclient (>=2.2.8,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
